--- a/style.css
+++ b/style.css
@@ -41,6 +41,14 @@ button:hover{
     color: var(--cor-principal);
 }
 
+    .caixa resultado{
+        display: none;
+    }
+
+    .caixa resultado.mostrar{
+        display:block;
+    }
+
 .caixa-perguntas{
     padding-bottom: 10px;
 }
