--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root{
-    --cor-fundo: #01080E;
-    --cor-principal: #0B0D20 ;
-    --cor-secundaria: #212333;
-    --cor-destaque: #2BDEFD;
-    --cor-texto: #D7F9FF;
+    --cor-fundo: #000000;
+    --cor-principal: #00b32d ;
+    --cor-secundaria: #005504;
+    --cor-destaque: #00ff55;
+    --cor-texto: #ffffff;
 }
 
 body{
@@ -41,11 +41,11 @@ button:hover{
     color: var(--cor-principal);
 }
 
-    .caixa resultado{
+    .caixa-resultado{
         display: none;
     }
 
-    .caixa resultado.mostrar{
+    .caixa-resultado.mostrar{
         display:block;
     }
 
