--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --cor-fundo: #000000;
     --cor-principal: #00b32d ;
     --cor-secundaria: #005504;
-    --cor-destaque: #00ff55;
+    --cor-destaque: #00270d;
     --cor-texto: #ffffff;
 }
 
