--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --cor-fundo: #000000;
-    --cor-principal: #00b32d ;
-    --cor-secundaria: #005504;
+    --cor-principal: #003d0f ;
+    --cor-secundaria: #008307;
     --cor-destaque: #00270d;
     --cor-texto: #ffffff;
 }
