--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --cor-fundo: #000000;
     --cor-principal: #003d0f ;
-    --cor-secundaria: #002b02;
+    --cor-secundaria: #00d10a;
     --cor-destaque: #00270d;
     --cor-texto: #ffffff;
 }
