--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --cor-fundo: #000000;
     --cor-principal: #003d0f ;
     --cor-secundaria: #00d10a;
-    --cor-destaque: #00270d;
+    --cor-destaque: #00ac39;
     --cor-texto: #ffffff;
 }
 
