--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
     --cor-fundo: #000000;
-    --cor-principal: #000000 ;
+    --cor-principal: #bcffab ;
     --cor-secundaria: #00b609;
-    --cor-destaque: #00ac39;
+    --cor-destaque: #003504;
     --cor-texto: #ffffff;
 }
 
