--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cor-principal: #bcffab ;
     --cor-secundaria: #00b609;
     --cor-destaque: #003504;
-    --cor-texto: #ffffff;
+    --cor-texto: #000000;
 }
 
 body{
