--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
     --cor-fundo: #000000;
-    --cor-principal: #bcffab ;
-    --cor-secundaria: #00b609;
-    --cor-destaque: #003504;
+    --cor-principal: #006c9e ;
+    --cor-secundaria: #00badb;
+    --cor-destaque: #00dde9;
     --cor-texto: #000000;
 }
 
